--- a/src/pages/libros/[id].astro
+++ b/src/pages/libros/[id].astro
@@ -10,23 +10,31 @@ export async function getStaticPaths() {
     }));
 }
 
-const { book } = Astro.props
-const { data } = book
-const {  title, author, img, readtime, description, buy } = data
+const { book } = Astro.props;
+const { slug, data } = book;
+const { title, author, img, readtime, description, buy } = data;
 
-const { Content } = await render(book)
+const { Content } = await render(book);
 ---
 
 <Layout title={`${title} - Dev Books`}>
     <div class="flex gap-12">
         <aside class="flex flex-col items-center gab-4">
-            <img src={`/${img}`} alt={`${title}`} class="rounded w-72 h-auto">
+            <a href="/" class="pb-2 hover:underline opacity-70"> {`<- `} Regresar</a>
+            <img
+                transition:name={`img-${slug}`}
+                src={`/${img}`}
+                alt={`${title}`}
+                class="rounded w-72 h-auto"
+            />
             <!-- Enlace para comprar -->
         </aside>
         <main class="max-w-2xl">
-            <h1 class="text-4xl font-bold mb-4">{title}</h1>
+            <h1 
+            transition:name={`title-${slug}`}
+            class="text-4xl font-bold mb-4">{title}</h1>
             <div class="prose prose-invert">
-                <Content/>
+                <Content />
             </div>
         </main>
     </div>
